--- a/_includes/quiz.njk
+++ b/_includes/quiz.njk
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47" crossorigin="anonymous">
   </head>
   <body>
-    <form class="pure-form pure-form-stacked" name="answer" method="POST" data-netlify="true" action="/netlify">
+    <form class="pure-form pure-form-stacked" name="answer" method="POST" action="/save_answer">
         <fieldset>
           <legend>{{ name }}'s Page</legend>
             <label for="answer">Answer:</label>
