--- a/src/_includes/quiz.njk
+++ b/src/_includes/quiz.njk
@@ -10,7 +10,7 @@
       .answer {
         white-space: pre-line;
         padding: 0.5em 0;
-        border-top: 1px dashed gray;
+        border-bottom: 1px dashed gray;
       }
       .answer:nth-child(even){
         background-color: #f9f9f9;
