--- a/src/_includes/quiz.njk
+++ b/src/_includes/quiz.njk
@@ -42,6 +42,10 @@
     <p id="cat" style="text-align: center;">
       {% if name=="Anthony" %}
         <img src="https://static.hotoldermale.com/_thumbs/scn_283_7f4769237566df0699a417e77cd497b6.jpg" />
+      {% elif name=="Andrew" %}
+        🕺
+      {% elif name=="Clare" %}
+        🧘‍♀️
       {% else %}
         💜
       {% endif %}
