--- a/src/_includes/quiz.njk
+++ b/src/_includes/quiz.njk
@@ -48,6 +48,12 @@
         🕺
       {% elif name=="Clare" %}
         🧘‍♀️
+      {% elif name=="Katie" %}
+        👩‍⚕️
+      {% elif name=="Julia" %}
+        🦔
+      {% elif name=="Antony" %}
+        😎
       {% else %}
         💜
       {% endif %}
