--- a/src/_includes/quiz.njk
+++ b/src/_includes/quiz.njk
@@ -52,7 +52,7 @@
         👩‍⚕️
       {% elif name=="Julia" %}
         🦔
-      {% elif name=="Antony" %}
+      {% elif name=="Anthony" %}
         😎
       {% else %}
         💜
